feat: implement dynamic login, harden data pipeline, and optimize multi-asset performance visuals
- Added dynamic PAN entry screen with localStorage session persistence
- Implemented 'Setup Mode' onboarding flow to bypass login for initial CAS uploads
- Hardened backend data pipeline with strict PAN normalization (trim/uppercase)
- Refactored dashboard service to use batch-fetching for tax lots and realized gains
- Corrected benchmark tickers and increased lookback to 2y for high-density history
- Optimized Alpha Generation chart with vertical layout to prevent label collisions
- Fixed Gold fund miscategorization by cross-referencing scheme names
- Added WebSocket support and Async processing for improved system responsiveness