@@ -3,15 +3,8 @@ package com.oreki.cas_injector.dashboard.service;
 import java.math.BigDecimal;
 import java.math.RoundingMode;
 import java.time.LocalDate;
-import java.util.ArrayList;
-import java.util.Comparator;
-import java.util.List;
-import java.util.Map;
-import java.util.Optional;
+import java.util.*;
 import java.util.stream.Collectors;
-
-import org.springframework.cache.annotation.Cacheable;
-import org.springframework.stereotype.Service;
 
 import com.oreki.cas_injector.backfill.model.HistoricalNav;
 import com.oreki.cas_injector.backfill.repository.HistoricalNavRepository;
@@ -22,6 +15,7 @@ import com.oreki.cas_injector.core.dto.SchemeDetailsDTO;
 import com.oreki.cas_injector.core.dto.SchemePerformanceDTO;
 import com.oreki.cas_injector.core.model.Investor;
 import com.oreki.cas_injector.core.model.Scheme;
+import com.oreki.cas_injector.transactions.model.Transaction;
 import com.oreki.cas_injector.core.repository.InvestorRepository;
 import com.oreki.cas_injector.core.utils.CommonUtils;
 import com.oreki.cas_injector.core.utils.FundStatus;
@@ -29,17 +23,19 @@ import com.oreki.cas_injector.dashboard.dto.DashboardSummaryDTO;
 import com.oreki.cas_injector.transactions.dto.TransactionDTO;
 import com.oreki.cas_injector.transactions.model.CapitalGainAudit;
 import com.oreki.cas_injector.transactions.model.TaxLot;
-import com.oreki.cas_injector.transactions.model.Transaction;
 import com.oreki.cas_injector.transactions.repository.CapitalGainAuditRepository;
 import com.oreki.cas_injector.transactions.repository.TaxLotRepository;
 import com.oreki.cas_injector.transactions.repository.TransactionRepository;
 
+import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
+
 import lombok.RequiredArgsConstructor;
-
-
+import lombok.extern.slf4j.Slf4j;
 
 @Service
 @RequiredArgsConstructor
+@Slf4j
 public class DashboardService {
 
     private final InvestorRepository investorRepo;
@@ -47,45 +43,41 @@ public class DashboardService {
     private final CapitalGainAuditRepository auditRepo;
     private final TransactionRepository txnRepo;
     private final NavService navService;
+    private final ConvictionMetricsRepository metricsRepo;
     private final HistoricalNavRepository historicalNavRepo;
     private final BenchmarkService benchmarkService;
-    private final ConvictionMetricsRepository metricsRepo;
 
-    private String sanitizeAmfi(String amfi) {
-        if (amfi == null) return "";
-        String s = amfi.trim();
-        return s.replaceFirst("^0+(?!$)", "");
-    }
-
-    @Cacheable(value = "dashboardSummaryV3", key = "#pan")
-    public DashboardSummaryDTO getInvestorSummary(String pan) {
+    @Transactional(readOnly = true)
+    public DashboardSummaryDTO getInvestorSummary(String rawPan) {
+        String pan = rawPan.trim().toUpperCase();
+        log.info("🔍 Generating Dashboard Summary for PAN: {}", pan);
+        
         Optional<Investor> investorOpt = investorRepo.findByPanWithDetails(pan);
         if (investorOpt.isEmpty()) {
+            log.warn("⚠️ Investor not found for PAN: {}", pan);
             return DashboardSummaryDTO.builder()
                 .investorName("New Investor")
-                .schemeBreakdown(List.of())
+                .schemeBreakdown(Collections.emptyList())
                 .totalInvestedAmount(BigDecimal.ZERO)
-                .totalRealizedGain(BigDecimal.ZERO)
-                .totalLTCG(BigDecimal.ZERO)
-                .totalSTCG(BigDecimal.ZERO)
-                .currentInvestedAmount(BigDecimal.ZERO)
                 .currentValueAmount(BigDecimal.ZERO)
-                .totalUnrealizedGain(BigDecimal.ZERO)
                 .overallReturn("0%")
                 .overallXirr("0%")
                 .build();
         }
+
         Investor investor = investorOpt.get();
+        Set<Scheme> allSchemes = investor.getFolios().stream()
+            .flatMap(f -> f.getSchemes().stream())
+            .collect(Collectors.toSet());
 
-        Map<String, MarketMetrics> metricsMap = metricsRepo.fetchLiveMetricsMap(pan);
-
+        // Batch fetch heavy data to avoid N+1
         List<CapitalGainAudit> allInvestorAudits = auditRepo.findAllBySellTransactionSchemeFolioInvestorPan(pan);
-        Map<Long, List<CapitalGainAudit>> auditsBySchemeId = allInvestorAudits.stream()
+        Map<Long, List<CapitalGainAudit>> auditMapBySchemeId = allInvestorAudits.stream()
             .collect(Collectors.groupingBy(a -> a.getSellTransaction().getScheme().getId()));
 
-        List<Scheme> allSchemes = investor.getFolios().stream()
-            .flatMap(f -> f.getSchemes().stream())
-            .toList();
+        List<TaxLot> allOpenLots = taxLotRepo.findByStatusAndSchemeFolioInvestorPan("OPEN", pan);
+        Map<Long, List<TaxLot>> openLotsBySchemeId = allOpenLots.stream()
+            .collect(Collectors.groupingBy(l -> l.getScheme().getId()));
 
         List<String> amfiCodes = allSchemes.stream()
             .map(s -> sanitizeAmfi(s.getAmfiCode()))
@@ -102,74 +94,39 @@ public class DashboardService {
             .collect(Collectors.groupingBy(HistoricalNav::getAmfiCode, 
                 Collectors.toMap(HistoricalNav::getNavDate, HistoricalNav::getNav, (a, b) -> a)));
 
+        Map<String, MarketMetrics> metricsMap = metricsRepo.fetchLiveMetricsMap(pan);
+
         List<TransactionDTO> totalCashFlow = new ArrayList<>();
-        
+
         List<SchemePerformanceDTO> breakdown = allSchemes.stream()
             .map(scheme -> {
-                List<TaxLot> allLots = scheme.getTaxLots();
-                List<CapitalGainAudit> schemeAudits = auditsBySchemeId.getOrDefault(scheme.getId(), List.of());
                 String code = sanitizeAmfi(scheme.getAmfiCode());
-                Map<LocalDate, BigDecimal> schemeNavHistory = navHistoryMap.getOrDefault(code, Map.of());
+                List<TaxLot> openLots = openLotsBySchemeId.getOrDefault(scheme.getId(), Collections.emptyList());
+                List<CapitalGainAudit> audits = auditMapBySchemeId.getOrDefault(scheme.getId(), Collections.emptyList());
+                Map<LocalDate, BigDecimal> schemeNavHistory = navHistoryMap.getOrDefault(code, Collections.emptyMap());
 
-                BigDecimal totalInvested = scheme.getTransactions().stream()
-                    .filter(t -> "BUY".equalsIgnoreCase(t.getTransactionType()) || 
-                    "STAMP_DUTY".equalsIgnoreCase(t.getTransactionType()))
-                    .map(Transaction::getAmount)
-                    .map(CommonUtils.SCALE_MONEY)
-                    .reduce(BigDecimal.ZERO, BigDecimal::add);
-
-                BigDecimal soldAmountCost = schemeAudits.stream()
-                    .map(audit -> audit.getUnitsMatched().multiply(audit.getTaxLot().getCostBasisPerUnit()))
-                    .map(CommonUtils.SCALE_MONEY)
-                    .reduce(BigDecimal.ZERO, BigDecimal::add);
-
-                BigDecimal currentInvested = allLots.stream()
-                    .filter(lot -> "OPEN".equalsIgnoreCase(lot.getStatus()))
-                    .map(lot -> lot.getRemainingUnits().multiply(lot.getCostBasisPerUnit()))
-                    .map(CommonUtils.SCALE_MONEY)
-                    .reduce(BigDecimal.ZERO, BigDecimal::add);
-
-                BigDecimal schemeGain = schemeAudits.stream()
-                    .map(CapitalGainAudit::getRealizedGain)
-                    .map(CommonUtils.SCALE_MONEY)
-                    .reduce(BigDecimal.ZERO, BigDecimal::add);
-
-                long cleanTxCount = scheme.getTransactions().stream()
-                    .filter(t -> "BUY".equalsIgnoreCase(t.getTransactionType()) || 
-                    "SELL".equalsIgnoreCase(t.getTransactionType())).count();
-
-                SchemeDetailsDTO schemeDetails = navService.getLatestSchemeDetails(scheme.getAmfiCode());
-                BigDecimal currentNav = schemeDetails.getNav();
-                String amfiCategory = schemeDetails.getCategory().toUpperCase();
-
-                String bucket;
-                if (amfiCategory.contains("ARBITRAGE")) {
-                    bucket = "SAFE_REBALANCER_EQUITY_TAX"; 
-                } 
-                else if (amfiCategory.contains("GOLD") || schemeDetails.getSchemeName().toUpperCase().contains("GOLD")) {
-                    bucket = "GOLD_HEDGE_24M";
-                }
-                else if (amfiCategory.contains("EQUITY") || amfiCategory.contains("INDEX") || amfiCategory.contains("FLEXI") || amfiCategory.contains("GROWTH")) {
-                    bucket = "AGGRESSIVE_GROWTH";
-                } 
-                else if (amfiCategory.contains("TERM") || amfiCategory.contains("LIQUID") || amfiCategory.contains("DEBT")) {
-                    bucket = "DEBT_SLAB_TAXED";
-                } 
-                else {
-                    bucket = "OTHERS_CHECK_ISIN";
-                }
-                    
-                BigDecimal unitsHeld = allLots.stream()
-                    .filter(lot -> "OPEN".equalsIgnoreCase(lot.getStatus()))
+                // Value aggregation
+                BigDecimal unitsHeld = openLots.stream()
                     .map(TaxLot::getRemainingUnits)
                     .reduce(BigDecimal.ZERO, BigDecimal::add);
 
-                BigDecimal currentValue = Optional.of(unitsHeld.multiply(currentNav))
-                    .map(CommonUtils.SCALE_MONEY)
-                    .orElse(BigDecimal.ZERO);
+                BigDecimal currentInvested = openLots.stream()
+                    .map(lot -> lot.getRemainingUnits().multiply(lot.getCostBasisPerUnit()))
+                    .reduce(BigDecimal.ZERO, BigDecimal::add);
 
-                double ltcgUnrealized = allLots.stream()
-                    .filter(lot -> "OPEN".equalsIgnoreCase(lot.getStatus()))
+                SchemeDetailsDTO schemeDetails = navService.getLatestSchemeDetails(scheme.getAmfiCode());
+                BigDecimal currentNav = schemeDetails.getNav();
+                
+                BigDecimal currentValue = unitsHeld.multiply(currentNav).setScale(2, RoundingMode.HALF_UP);
+                BigDecimal unrealizedGain = currentValue.subtract(currentInvested);
+
+                BigDecimal realizedGain = audits.stream()
+                    .map(CapitalGainAudit::getRealizedGain)
+                    .reduce(BigDecimal.ZERO, BigDecimal::add);
+
+                // Tax calculations (Simplified for dashboard)
+                String amfiCategory = (schemeDetails.getCategory() != null) ? schemeDetails.getCategory().toUpperCase() : "OTHER";
+                double ltcgUnrealized = openLots.stream()
                     .mapToDouble(lot -> {
                         String taxCat = CommonUtils.DETERMINE_TAX_CATEGORY.apply(lot.getBuyDate(), LocalDate.now(), amfiCategory);
                         if (taxCat.contains("LTCG")) {
@@ -180,8 +137,7 @@ public class DashboardService {
                         return 0.0;
                     }).sum();
 
-                double stcgUnrealized = allLots.stream()
-                    .filter(lot -> "OPEN".equalsIgnoreCase(lot.getStatus()))
+                double stcgUnrealized = openLots.stream()
                     .mapToDouble(lot -> {
                         String taxCat = CommonUtils.DETERMINE_TAX_CATEGORY.apply(lot.getBuyDate(), LocalDate.now(), amfiCategory);
                         if (!taxCat.contains("LTCG")) {
@@ -192,24 +148,20 @@ public class DashboardService {
                         return 0.0;
                     }).sum();
 
-                BigDecimal unrealizedGain =  Optional.of(currentValue.subtract(currentInvested))
-                    .map(CommonUtils.SCALE_MONEY)
-                    .orElse(BigDecimal.ZERO);
-
+                // Cash flows for XIRR
                 List<TransactionDTO> cashFlows = scheme.getTransactions().stream()
                     .map(t -> {
                         BigDecimal preciseAmount = Optional.ofNullable(schemeNavHistory.get(t.getDate()))
                             .map(nav -> nav.multiply(t.getUnits().abs()))
                             .orElse(t.getAmount());
-                            
                         return new TransactionDTO(preciseAmount.negate(), t.getDate());
                     })
                     .collect(Collectors.toList());
                                 
-                FundStatus status = CommonUtils.GET_STATUS.apply(unitsHeld);
                 totalCashFlow.addAll(cashFlows);
                 cashFlows.sort(Comparator.comparing(TransactionDTO::getDate));
 
+                FundStatus status = (unitsHeld.compareTo(new BigDecimal("0.001")) > 0) ? FundStatus.ACTIVE : FundStatus.REDEEMED;
                 if (status == FundStatus.ACTIVE) {
                     cashFlows.add(new TransactionDTO(currentValue, LocalDate.now()));
                 }
@@ -217,8 +169,13 @@ public class DashboardService {
                 BigDecimal xirrValue = CommonUtils.SOLVE_XIRR.apply(cashFlows);
                 String displayXirr = CommonUtils.SCALE_MONEY.apply(xirrValue).toString() + "%";
 
-                double benchXirr = benchmarkService.getBenchmarkReturn(bucket, amfiCategory, scheme.getBenchmarkIndex());
+                String bucket = "OTHERS";
+                if (amfiCategory.contains("ELSS") || amfiCategory.contains("TAX")) bucket = "TAX_SAVER_ELSS";
+                else if (amfiCategory.contains("GOLD") || scheme.getName().toUpperCase().contains("GOLD")) bucket = "GOLD_HEDGE_24M";
+                else if (amfiCategory.contains("EQUITY") || amfiCategory.contains("INDEX") || amfiCategory.contains("GROWTH")) bucket = "AGGRESSIVE_GROWTH";
+                else if (amfiCategory.contains("DEBT") || amfiCategory.contains("LIQUID")) bucket = "DEBT_SLAB_TAXED";
 
+                double benchXirr = benchmarkService.getBenchmarkReturn(bucket, amfiCategory, scheme.getBenchmarkIndex());
                 MarketMetrics m = metricsMap.getOrDefault(code, MarketMetrics.fromLegacy(50, 0, 0, 0, 0, 0.5, 0, 0, LocalDate.of(1970, 1, 1)));
 
                 return SchemePerformanceDTO.builder()
@@ -226,15 +183,14 @@ public class DashboardService {
                     .simpleName(CommonUtils.NORMALIZE_NAME.apply(scheme.getName()))
                     .isin(scheme.getIsin())
                     .amfiCode(scheme.getAmfiCode())
-                    .totalInvested(totalInvested)
-                    .soldAmountCost(soldAmountCost)
+                    .totalInvested(scheme.getTransactions().stream().filter(t -> t.getUnits().compareTo(BigDecimal.ZERO) > 0).map(Transaction::getAmount).reduce(BigDecimal.ZERO, BigDecimal::add))
                     .currentInvested(currentInvested)
                     .currentValue(currentValue)
-                    .realizedGain(schemeGain)
+                    .realizedGain(realizedGain)
                     .unrealizedGain(unrealizedGain)
                     .ltcgUnrealizedGain(ltcgUnrealized)
                     .stcgUnrealizedGain(stcgUnrealized)
-                    .transactionCount(cleanTxCount)
+                    .transactionCount(scheme.getTransactions().size())
                     .xirr(displayXirr)
                     .benchmarkXirr(benchXirr)
                     .status(status)
@@ -264,58 +220,27 @@ public class DashboardService {
             })
             .collect(Collectors.toList());
 
-        BigDecimal aggregateTotalInvested = breakdown.stream()
-            .map(SchemePerformanceDTO::getTotalInvested)
-            .map(CommonUtils.SCALE_MONEY)
-            .reduce(BigDecimal.ZERO, BigDecimal::add);
+        BigDecimal aggregateCurrentInvested = breakdown.stream().map(SchemePerformanceDTO::getCurrentInvested).reduce(BigDecimal.ZERO, BigDecimal::add);
+        BigDecimal aggregateCurrentValue = breakdown.stream().map(SchemePerformanceDTO::getCurrentValue).reduce(BigDecimal.ZERO, BigDecimal::add);
+        BigDecimal aggregateTotalInvested = breakdown.stream().map(SchemePerformanceDTO::getTotalInvested).reduce(BigDecimal.ZERO, BigDecimal::add);
+        BigDecimal aggregateRealizedGain = breakdown.stream().map(SchemePerformanceDTO::getRealizedGain).reduce(BigDecimal.ZERO, BigDecimal::add);
+        BigDecimal aggregateUnrealizedGain = aggregateCurrentValue.subtract(aggregateCurrentInvested);
 
-        BigDecimal aggregateCurrentInvested = breakdown.stream()
-            .map(SchemePerformanceDTO::getCurrentInvested)
-            .reduce(BigDecimal.ZERO, BigDecimal::add);
-
-        BigDecimal aggregateCurrentValue = breakdown.stream()
-            .map(SchemePerformanceDTO::getCurrentValue)
-            .map(CommonUtils.SCALE_MONEY)
-            .reduce(BigDecimal.ZERO, BigDecimal::add);
-
-        BigDecimal aggregateRealizedGain = breakdown.stream()
-            .map(SchemePerformanceDTO::getRealizedGain)
-            .map(CommonUtils.SCALE_MONEY)
-            .reduce(BigDecimal.ZERO, BigDecimal::add);
-        
-        BigDecimal aggregateUnrealizedGain = breakdown.stream()
-            .map(SchemePerformanceDTO::getUnrealizedGain)
-            .map(CommonUtils.SCALE_MONEY)
-            .reduce(BigDecimal.ZERO, BigDecimal::add);
-
+        // STCG for current FY
         LocalDate fyStart = CommonUtils.getCurrentFyStart();
-
-        BigDecimal totalLTCG = allInvestorAudits.stream()
-            .filter(a -> a.getTaxCategory().contains("LTCG") && !a.getSellTransaction().getDate().isBefore(fyStart)) 
-            .map(CapitalGainAudit::getRealizedGain)
-            .reduce(BigDecimal.ZERO, BigDecimal::add);
-
-        BigDecimal totalSTCG = allInvestorAudits.stream()
+        BigDecimal realizedStcg = allInvestorAudits.stream()
             .filter(a -> (a.getTaxCategory().contains("STCG") || a.getTaxCategory().contains("SLAB")) && !a.getSellTransaction().getDate().isBefore(fyStart))
             .map(CapitalGainAudit::getRealizedGain)
             .reduce(BigDecimal.ZERO, BigDecimal::add);
 
-        BigDecimal portfolioPerformance = aggregateTotalInvested.compareTo(BigDecimal.ZERO) > 0 
-         ? aggregateUnrealizedGain.divide(aggregateTotalInvested, 4, RoundingMode.HALF_UP)
-        .multiply(new BigDecimal("100")): BigDecimal.ZERO;
+        BigDecimal portfolioPerformance = aggregateCurrentInvested.compareTo(BigDecimal.ZERO) > 0 
+            ? aggregateUnrealizedGain.divide(aggregateCurrentInvested, 4, RoundingMode.HALF_UP).multiply(new BigDecimal("100"))
+            : BigDecimal.ZERO;
 
-        String overallReturn = CommonUtils.SCALE_MONEY.apply(portfolioPerformance) + "%";
-
-        BigDecimal totalPortfolioValue = breakdown.stream()
-            .map(SchemePerformanceDTO::getCurrentValue) 
-            .reduce(BigDecimal.ZERO, BigDecimal::add);
-
-        totalCashFlow.add(new TransactionDTO(totalPortfolioValue, LocalDate.now()));
+        totalCashFlow.add(new TransactionDTO(aggregateCurrentValue, LocalDate.now()));
         totalCashFlow.sort(Comparator.comparing(TransactionDTO::getDate));
-        
         BigDecimal totalXirr = CommonUtils.SOLVE_XIRR.apply(totalCashFlow);
-        String overallXirr = CommonUtils.SCALE_MONEY.apply(totalXirr) + "%";
-        
+
         return DashboardSummaryDTO.builder()
             .investorName(investor.getName())
             .totalFolios(investor.getFolios().size())
@@ -326,12 +251,20 @@ public class DashboardService {
             .currentValueAmount(aggregateCurrentValue)
             .totalRealizedGain(aggregateRealizedGain)
             .totalUnrealizedGain(aggregateUnrealizedGain)
-            .openTaxLots(taxLotRepo.countByStatusAndSchemeFolioInvestorPan("OPEN", pan))
-            .totalSTCG(totalSTCG)
-            .totalLTCG(totalLTCG)
+            .openTaxLots(allOpenLots.size())
+            .overallReturn(CommonUtils.SCALE_MONEY.apply(portfolioPerformance) + "%")
+            .overallXirr(CommonUtils.SCALE_MONEY.apply(totalXirr) + "%")
+            .totalSTCG(realizedStcg)
             .schemeBreakdown(breakdown)
-            .overallReturn(overallReturn)
-            .overallXirr(overallXirr)
             .build();
+    }
+
+    private String sanitizeAmfi(String code) {
+        if (code == null) return "0";
+        String s = code.trim();
+        while (s.startsWith("0") && s.length() > 1) {
+            s = s.substring(1);
+        }
+        return s;
     }
 }
